--- a/Basic_Samples/Functions/functions_with_azure_search.ipynb
+++ b/Basic_Samples/Functions/functions_with_azure_search.ipynb
@@ -13,28 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from  azure.search.documents.indexes.models import HnswVectorSearchAlgorithmConfiguration"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tenacity'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m  \n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopenai\u001b[39;00m  \n\u001b[1;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtenacity\u001b[39;00m \u001b[39mimport\u001b[39;00m retry, wait_random_exponential, stop_after_attempt  \n\u001b[0;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mazure\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcredentials\u001b[39;00m \u001b[39mimport\u001b[39;00m AzureKeyCredential  \n\u001b[0;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mazure\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msearch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdocuments\u001b[39;00m \u001b[39mimport\u001b[39;00m SearchClient\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tenacity'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os  \n",
     "import json  \n",
@@ -44,6 +34,7 @@
     "from azure.search.documents import SearchClient\n",
     "from azure.search.documents.indexes import SearchIndexClient  \n",
     "from azure.search.documents.models import Vector  \n",
+    "from azure.search.documents.indexes.models import HnswVectorSearchAlgorithmConfiguration\n",
     "from azure.search.documents.indexes.models import (  \n",
     "    SearchIndex,  \n",
     "    SearchField,  \n",
@@ -57,13 +48,12 @@
     "    SearchField,  \n",
     "    SemanticSettings,  \n",
     "    VectorSearch,  \n",
-    "    VectorSearchAlgorithmConfiguration,  \n",
     ")  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,15 +91,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      " recipes-vectors deleted\n",
-      " recipes-vectors created\n"
+      "hnsw_parameters is not a known attribute of class <class 'azure.search.documents.indexes._generated.models._models_py3.HnswVectorSearchAlgorithmConfiguration'> and will be ignored\n"
+     ]
+    },
+    {
+     "ename": "HttpResponseError",
+     "evalue": "Operation returned an invalid status 'Forbidden'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mHttpResponseError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 43\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[39m# Create the search index with the semantic settings\u001b[39;00m\n\u001b[0;32m     41\u001b[0m index \u001b[39m=\u001b[39m SearchIndex(name\u001b[39m=\u001b[39mindex_name, fields\u001b[39m=\u001b[39mfields, \n\u001b[0;32m     42\u001b[0m                     vector_search\u001b[39m=\u001b[39mvector_search, semantic_settings\u001b[39m=\u001b[39msemantic_settings)\n\u001b[1;32m---> 43\u001b[0m result \u001b[39m=\u001b[39m index_client\u001b[39m.\u001b[39;49mdelete_index(index)\n\u001b[0;32m     44\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mindex_name\u001b[39m}\u001b[39;00m\u001b[39m deleted\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     45\u001b[0m result \u001b[39m=\u001b[39m index_client\u001b[39m.\u001b[39mcreate_index(index)\n",
+      "File \u001b[1;32mc:\\Users\\pmozd\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\azure\\core\\tracing\\decorator.py:78\u001b[0m, in \u001b[0;36mdistributed_trace.<locals>.decorator.<locals>.wrapper_use_tracer\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     76\u001b[0m span_impl_type \u001b[39m=\u001b[39m settings\u001b[39m.\u001b[39mtracing_implementation()\n\u001b[0;32m     77\u001b[0m \u001b[39mif\u001b[39;00m span_impl_type \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m---> 78\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m     80\u001b[0m \u001b[39m# Merge span is parameter is set, but only if no explicit parent are passed\u001b[39;00m\n\u001b[0;32m     81\u001b[0m \u001b[39mif\u001b[39;00m merge_span \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m passed_in_parent:\n",
+      "File \u001b[1;32mc:\\Users\\pmozd\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\azure\\search\\documents\\indexes\\_search_index_client.py:188\u001b[0m, in \u001b[0;36mSearchIndexClient.delete_index\u001b[1;34m(self, index, match_condition, **kwargs)\u001b[0m\n\u001b[0;32m    186\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[0;32m    187\u001b[0m     index_name \u001b[39m=\u001b[39m index\n\u001b[1;32m--> 188\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_client\u001b[39m.\u001b[39;49mindexes\u001b[39m.\u001b[39;49mdelete(index_name\u001b[39m=\u001b[39;49mindex_name, error_map\u001b[39m=\u001b[39;49merror_map, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\pmozd\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\azure\\core\\tracing\\decorator.py:78\u001b[0m, in \u001b[0;36mdistributed_trace.<locals>.decorator.<locals>.wrapper_use_tracer\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     76\u001b[0m span_impl_type \u001b[39m=\u001b[39m settings\u001b[39m.\u001b[39mtracing_implementation()\n\u001b[0;32m     77\u001b[0m \u001b[39mif\u001b[39;00m span_impl_type \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m---> 78\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m     80\u001b[0m \u001b[39m# Merge span is parameter is set, but only if no explicit parent are passed\u001b[39;00m\n\u001b[0;32m     81\u001b[0m \u001b[39mif\u001b[39;00m merge_span \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m passed_in_parent:\n",
+      "File \u001b[1;32mc:\\Users\\pmozd\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\azure\\search\\documents\\indexes\\_generated\\operations\\_indexes_operations.py:812\u001b[0m, in \u001b[0;36mIndexesOperations.delete\u001b[1;34m(self, index_name, if_match, if_none_match, request_options, **kwargs)\u001b[0m\n\u001b[0;32m    810\u001b[0m     map_error(status_code\u001b[39m=\u001b[39mresponse\u001b[39m.\u001b[39mstatus_code, response\u001b[39m=\u001b[39mresponse, error_map\u001b[39m=\u001b[39merror_map)\n\u001b[0;32m    811\u001b[0m     error \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_deserialize\u001b[39m.\u001b[39mfailsafe_deserialize(_models\u001b[39m.\u001b[39mSearchError, pipeline_response)\n\u001b[1;32m--> 812\u001b[0m     \u001b[39mraise\u001b[39;00m HttpResponseError(response\u001b[39m=\u001b[39mresponse, model\u001b[39m=\u001b[39merror)\n\u001b[0;32m    814\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m:\n\u001b[0;32m    815\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39m(pipeline_response, \u001b[39mNone\u001b[39;00m, {})\n",
+      "\u001b[1;31mHttpResponseError\u001b[0m: Operation returned an invalid status 'Forbidden'"
      ]
     }
    ],
@@ -129,7 +133,7 @@
     "\n",
     "vector_search = VectorSearch(\n",
     "    algorithm_configurations=[\n",
-    "        VectorSearchAlgorithmConfiguration(\n",
+    "        HnswVectorSearchAlgorithmConfiguration(\n",
     "            name=\"my-vector-config\",\n",
     "            kind=\"hnsw\",\n",
     "            hnsw_parameters={\n",
